--- a/test.Rmd
+++ b/test.Rmd
@@ -1,7 +1,7 @@
 ---
-output: pdf_document
+output: html_document
 ---
-#Daily 99% VaR report
+##Daily 99% VaR report
 ```{r, echo=F, message=FALSE, warning=F}
 source('loadUp.R')
 #library(rmarkdown)
@@ -9,58 +9,54 @@ source('loadUp.R')
 #subs.o = organizeSubs(subs)
 pofs = loadPOFs()
 ufts = loadUFTs()
-subs = loadSubAdvisors()
-reportDate = end(ufts['/20160129'])
+#subs = loadSubAdvisors()
+reportDate = end(ufts['/20160208'])
 ```
 Date: `r reportDate`
 ```{r, echo=F, message=FALSE, results = 'asis', warning=F}
 library(xtable)
 options(xtable.comment = F)
-sub.ex = dailyExceptions(subs[paste("/",reportDate, sep = "")])
-sub.ex[,2:4] = sub.ex[,2:4]*100
-names(sub.ex) = c("SubAdvisor", "Daily Return", "Lower Bound", "Upper Bound")
-uft.ex = dailyExceptions(ufts[paste("/",reportDate, sep = "")])
-uft.ex[,2:4] = uft.ex[,2:4]*100
-names(uft.ex) = c("UFT", "Daily Return", "Lower Bound", "Upper Bound")
-pof.ex = dailyExceptions(pofs[paste("/",reportDate, sep = "")])
-pof.ex[,2:4] = pof.ex[,2:4]*100
-names(pof.ex) = c("Fund", "Daily Return", "Lower Bound", "Upper Bound")
-#ufts.table = xtable(uft.ex, align = "llccc",  digits = 3)
-ufts.table = xtable(uft.ex, align = "llccc", digits = 2)
-pofs.table = xtable(pof.ex, align = "llccc", digits = 2)
-subs.table = xtable(sub.ex, align = "llccc", digits = 2)
+#sub.ex = dailyExceptions(subs[paste("/",reportDate, sep = "")])*100
+#sub.ex[,2:4] = sub.ex[,2:4]*100
+#names(sub.ex) = c("SubAdvisor", "Daily Return", "Lower Bound", "Upper Bound")
+uft.ex = dailyExceptions(ufts[paste("/",reportDate, sep = "")])*100
+#uft.ex[,2:4] = uft.ex[,2:4]*100
+#names(uft.ex) = c("UFT", "Daily Return", "Lower Bound", "Upper Bound")
+pof.ex = dailyExceptions(pofs[paste("/",reportDate, sep = "")])*100
+#pof.ex[,2:4] = pof.ex[,2:4]*100
+#names(pof.ex) = c("Fund", "Daily Return", "Lower Bound", "Upper Bound")
+ufts.table = xtable(uft.ex, align = "lccc",  digits = 3)
+#ufts.table = xtable(uft.ex, align = "lccc", digits = 2)
+pofs.table = xtable(pof.ex, align = "lccc", digits = 2)
+#subs.table = xtable(sub.ex, align = "lccc", digits = 2)
 
 ```
-#POFs 
+* **POFs**
 
 ```{r, echo=F, message=FALSE, results = 'asis'}
-print(pofs.table, floating = TRUE)
+print(pofs.table, floating = F, type = "html")
 ```
 
-#UFTs
+* **UFTs**
 
 ```{r, echo=F, message=FALSE, results = 'asis'}
-library(ggplot2)
-print(ufts.table, floating = TRUE)
+#library(ggplot2)
+print(ufts.table, floating = TRUE, type = "html")
 
 #for (i in 1:nrow(uft.ex)){
   #name = uft.ex$UFT
   #returns = na.omit(ufts[paste("/", reportDate, sep = ""), name])
   #bounds = nVaRBounds(returns)
   #plotBounds(cbind.lag(returns, bounds))
-}
+#}
 ```
 
 
 
-#SubAdvisors
+* **SubAdvisors**
 
 ```{r, echo=F, message=FALSE, results = 'asis'}
-library(ggplot2)
-name = sub.ex$SubAdvisor[1]
-returns = na.omit(subs[paste("/", reportDate, sep = ""), name])
-bounds = nVaRBounds(returns)
-p = plotBounds(cbind.lag(returns, bounds))
+#print(subs.table, floating = TRUE)
 
 #for (i in 1:nrow(sub.ex)){
  #name = sub.ex$SubAdvisor
@@ -69,6 +65,6 @@ p = plotBounds(cbind.lag(returns, bounds))
   #plotBounds(cbind.lag(returns, bounds))
 #}
 ```
- `r print(p)`
+
 
 
