--- a/VaRReport_WEEKLY.Rmd
+++ b/VaRReport_WEEKLY.Rmd
@@ -8,48 +8,76 @@ output:
 
 ```{r, echo=FALSE, warning=FALSE, message=F, results='asis'}
 source('loadUp.R')
-subs.w = apply.weekly(subs, Return.cumulative)
-subs.w.o = organizeSubs(subs.w)
-ufts.w = apply.weekly(ufts, Return.cumulative)
-pofs.w = apply.weekly(pofs, Return.cumulative)
-
 library(xtable)
-#GET DATA OBJECTS
-# subs = loadSubAdvisors()
-# subs.o = organizeSubs(subs)
-# ufts = loadUFTs()
-# pofs = loadPOFs()
-# inds = loadIndices()
-
 #SET OPTIONS
 options(xtable.comment = F)
 options(xtable.floating = F)
 options(xtable.timestamp = "")
 options(width = 100)
+# DAILY REPORT OPTION
+n = 26
+subs = apply.weekly(subs, Return.cumulative)
+for(i in 1:ncol(subs))
+    subs[which(subs[,i]==0),i] = NA
 
-# # TESTS
+subs.o = organizeSubs(subs)
+
+ufts = apply.weekly(ufts, Return.cumulative)
+for(i in 1:ncol(ufts))
+    ufts[which(ufts[,i]==0),i] = NA
+
+pofs = apply.weekly(pofs, Return.cumulative)
+for(i in 1:ncol(pofs))
+    pofs[which(pofs[,i]==0),i] = NA
+
+
+# ## ----------------------------------------------TESTS------------------------------------------------------
 # load(file = "hamfData2.RData")
 # testDate = '/20160217'
-# #GET VAR EXCEPTIONS - *****TESTDATE*****
 # sub.exceptions = lapply(lapply(subs.o, dailyExceptions, date = end(subs[testDate])), function(x)return(x*100))
 # pof.exceptions = dailyExceptions(pofs[testDate])*100
 # uft.exceptions = dailyExceptions(ufts[testDate])*100
 
+
+
+
+# -----------------------------------------REGULAR (NOT TESTS)------------------------------------------------------
+
 #GET VAR EXCEPTIONS
-sub.exceptions = lapply(lapply(subs.w.o, dailyExceptions, n = 26), function(x)return(x*100))
-pof.exceptions = dailyExceptions(pofs.w, n=26)*100
-uft.exceptions = dailyExceptions(ufts.w, n=26)*100
+sub.exceptions.99 = lapply(lapply(subs.o,FUN = function(y)return(dailyExceptions(y, n = n))), function(x)return(x*100))
+pof.exceptions.99 = dailyExceptions(pofs, n = n)*100
+uft.exceptions.99 = dailyExceptions(ufts, n = n)*100
 
-#ORGANIZE INTO DATAFRAME
-exceptions = organizeExceptions(pof.exceptions, uft.exceptions, sub.exceptions)
-```
+sub.exceptions.95 = lapply(lapply(subs.o, FUN = function(x)return(dailyExceptions(x, p = 0.95, n = n))), function(x)return(x*100))
+pof.exceptions.95 = dailyExceptions(pofs, p=0.95, n = n)*100
+uft.exceptions.95 = dailyExceptions(ufts, p=0.95, n = n)*100
 
-##Weekly 99% VaR Exceptions
-### `r end(subs.o$LSE)`
+sub.levels.var = lapply(currentLevelsSubs(subs.o, FUN = "VaR", width = n, omissions = c("MiscLSE", "MiscLSD", "MiscED", "MiscMF", "MiscMN")), function(l)return(l*100))
 
-```{r, echo=FALSE, warning=FALSE, message=F, results='asis'}
+sub.levels.es = lapply(currentLevelsSubs(subs.o, FUN = "ES", width = n, omissions = c("MiscLSE", "MiscLSD", "MiscED", "MiscMF", "MiscMN")), function(l)return(l*100))
+
+uft.levels.var = currentLevelsFunds(ufts, FUN = "VaR", width = n)*100
+uft.levels.es = currentLevelsFunds(ufts, FUN = "ES", width = n)*100
+
+pof.levels.var = currentLevelsFunds(pofs, FUN = "VaR", width = n)*100
+pof.levels.es = currentLevelsFunds(pofs, FUN = "ES", width = n)*100
+
+#ORGANIZE INTO DATAFRAMES
+exceptions.99 = organizeExceptions(pof.exceptions.99, uft.exceptions.99, sub.exceptions.99)
+exceptions.95 = organizeExceptions(pof.exceptions.95, uft.exceptions.95, sub.exceptions.95)
+
+levels.es = organizeLevels(pof.levels.es, uft.levels.es, sub.levels.es)
+levels.var = organizeLevels(pof.levels.var, uft.levels.var, sub.levels.var)
+
+
+reportDate = end(subs.o$LSE)
+
 #MAKE xtable objects
-exceptions.xList = xtableList(exceptions, align = 'rccc')
+exceptions.99.xList = xtableList(exceptions.99, align = 'rccc')
+exceptions.95.xList = xtableList(exceptions.95, align = 'rccc')
+
+levels.es.xlist = xtableList(levels.es, align = 'rcccc')
+levels.var.xlist = xtableList(levels.var, align = 'rcccc')
 
 large = function(x){
     paste0('{\\Large{\\bfseries ', x, '}}')
@@ -63,7 +91,17 @@ bold = function(x){
 red = function(x){
    paste0('{\\color{red} ', x, '}')
 }
-print.xtableList(exceptions.xList
+
+#print.xtableList(test.xList)
+```
+
+##Weekly VaR Exceptions
+### `r reportDate`
+
+
+###99% VaR Exceptions
+```{r, echo=FALSE, warning=FALSE, message=F, results='asis'}
+print.xtableList(exceptions.99.xList
                  #, colnames.format = "multiple"
                  , sanitize.subheadings.function = italic
                  , sanitize.colnames.function = bold
@@ -72,9 +110,57 @@ print.xtableList(exceptions.xList
                  #, booktabs = T
                  #, table.placement = "Ht"
                  )
-#print.xtableList(test.xList)
 ```
 
+
+###95% VaR Exceptions
+```{r, echo=FALSE, warning=FALSE, message=F, results='asis'}
+print.xtableList(exceptions.95.xList
+                 #, colnames.format = "multiple"
+                 , sanitize.subheadings.function = italic
+                 , sanitize.colnames.function = bold
+                 #, sanitize.numbers()
+                 , sanitize.rownames.function = bold
+                 #, booktabs = T
+                 #, table.placement = "Ht"
+                 )
+```
+\pagebreak
+
+##Weekly 99% Modified VaR Levels
+### `r reportDate`
+```{r, echo=FALSE, warning=FALSE, message=F, results='asis'}
+print.xtableList(levels.var.xlist
+                 #, colnames.format = "multiple"
+                 , sanitize.subheadings.function = italic
+                 , sanitize.colnames.function = bold
+                 #, sanitize.numbers()
+                 , sanitize.rownames.function = bold
+                 #, booktabs = T
+                 #, table.placement = "Ht"
+                 )
+```
+\pagebreak
+
+##Weekly 99% Expected Shortfall (Modified Conditional VaR) Levels
+### `r reportDate`
+
+
+
+> *Expected shortfall is the average expected loss beyond the VaR level, i.e. how much you expect to actually lose when the VaR level is breached.*
+
+
+```{r, echo=FALSE, warning=FALSE, message=F, results='asis'}
+print.xtableList(levels.es.xlist
+                 #, colnames.format = "multiple"
+                 , sanitize.subheadings.function = italic
+                 , sanitize.colnames.function = bold
+                 #, sanitize.numbers()
+                 , sanitize.rownames.function = bold
+                 #, booktabs = T
+                 #, table.placement = "Ht"
+                 )
+```
 
 
 
